--- a/beachparty.html
+++ b/beachparty.html
@@ -9,6 +9,9 @@
   <link rel="website icon" href="img/Logo.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -19,16 +22,16 @@
       <ul class="nav-links" id="navLinks">
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
-                    <a href="events.html">Events <i class="fas fa-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="corporate.html">Corporate Events</a></li>
-                        <li><a href="birthday.html">Birthday Parties</a></li>
-                        <li><a href="wedding.html">Weddings</a></li>
-                        <li><a href="farewell.html">Farewell Party</a></li>
-                        <li><a class='active' href="beachparty.html">Beach Party</a></li>
-                        <li><a href="festive and concert.html">Festival & Concert</a></li>
-                    </ul>
-                </li>
+          <a href="events.html">Events <i class="fas fa-chevron-down"></i></a>
+          <ul class="dropdown-menu">
+            <li><a href="corporate.html">Corporate Events</a></li>
+            <li><a href="birthday.html">Birthday Parties</a></li>
+            <li><a href="wedding.html">Weddings</a></li>
+            <li><a href="farewell.html">Farewell Party</a></li>
+            <li><a class='active' href="beachparty.html">Beach Party</a></li>
+            <li><a href="festive and concert.html">Festival & Concert</a></li>
+          </ul>
+        </li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -42,7 +45,8 @@
     style=" position:relative;top: 90px; display: flex;flex-wrap: wrap; align-items: center; gap: 40px; padding: 30px; margin-bottom: 10px; ">
     <!-- Left Side: Image -->
     <div>
-      <img src="img/Beach-party img (1).jpeg" alt="Event Celebration" style="width: 100%; border-radius: 8px; object-fit: cover;">
+      <img src="img/Beach-party img (1).jpeg" alt="Event Celebration"
+        style="width: 100%; border-radius: 8px; object-fit: cover;">
     </div>
 
     <!-- Right Side: Header Content -->
@@ -70,8 +74,7 @@
       </div>
 
       <!-- Call to Action Button -->
-      <div  class="abt"
-       style="margin-top: 20px;">
+      <div class="abt" style="margin-top: 20px;">
         <a href="https://www.soundcore.com/blogs/speaker/how-to-throw-a-beach-party" target="_blank"
           style=" padding: 10px 20px; background: #ff6b6b; color: white; border-radius: 5px; text-decoration: none;">ABOUT
           US</a>
@@ -83,10 +86,10 @@
 
 
   <!-- cards section -->
-  
+
   <section class="royal-packages-section">
     <!-- <h2>Corporate Event Packages</h2> -->
-      <h1 ><strong>Corporate Events Packages</strong></h1>
+    <h1><strong>Corporate Events Packages</strong></h1>
     <div class="royal-packages">
       <div class="royal-card delay-1">
         <h3>Basic <br> Package</h3>
@@ -96,12 +99,12 @@
           <li>frinds fantacy</li>
           <li>Live concert with frnds</li>
         </ul>
-        <p class="price">$2,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>5,000</p>
         <button class="bt">Book Now</button>
       </div>
 
       <div class="royal-card delay-3">
-         <span class="popular-label">Popular</span>
+        <span class="popular-label">Popular</span>
         <h3>Premium <br> Package</h3>
         <ul>
           <li>All Basic Features</li>
@@ -109,7 +112,7 @@
           <li>Branded Stage Design</li>
           <li>Event Photography and reels</li>
         </ul>
-        <p class="price">$4,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>10,000</p>
         <button class="bt">Book Now</button>
       </div>
       <div class="royal-card delay-3">
@@ -120,60 +123,60 @@
           <li>Live Performers</li>
           <li>Custom Corporate Gifts</li>
         </ul>
-        <p class="price">$6,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>15,000</p>
         <button class="bt">Book Now</button>
       </div>
     </div>
   </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-container">
-            <div class="footer-col">
-                <h3>Happivents</h3>
-                <p>Creating unforgettable experiences through exceptional event planning and execution.</p>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-            <div class="footer-col">
-                <h3>Quick Links</h3>
-                <ul class="footer-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h3>Event Services</h3>
-                <ul class="footer-links">
-                    <li><a href="#">Corporate Events</a></li>
-                    <li><a href="#">Wedding Planning</a></li>
-                    <li><a href="#">Birthday Parties</a></li>
-                    <li><a href="#">Farewell Parties</a></li>
-                    <li><a href="#">Festival & Concerts</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h3>Newsletter</h3>
-                <p>Subscribe to our newsletter for the latest event trends and offers.</p>
-                <form class="newsletter-form">
-                    <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <button type="submit" class="submit-btn">Subscribe</button>
-                </form>
-            </div>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-col">
+        <h3>Happivents</h3>
+        <p>Creating unforgettable experiences through exceptional event planning and execution.</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
-        <div class="copyright">
-            <p>&copy; 2025 happivents. All Rights Reserved.</p>
-        </div>
-    </footer>
+      </div>
+      <div class="footer-col">
+        <h3>Quick Links</h3>
+        <ul class="footer-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>Event Services</h3>
+        <ul class="footer-links">
+          <li><a href="#">Corporate Events</a></li>
+          <li><a href="#">Wedding Planning</a></li>
+          <li><a href="#">Birthday Parties</a></li>
+          <li><a href="#">Farewell Parties</a></li>
+          <li><a href="#">Festival & Concerts</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h3>Newsletter</h3>
+        <p>Subscribe to our newsletter for the latest event trends and offers.</p>
+        <form class="newsletter-form">
+          <div class="form-group">
+            <input type="email" placeholder="Your Email" required>
+          </div>
+          <button type="submit" class="submit-btn">Subscribe</button>
+        </form>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>&copy; 2025 happivents. All Rights Reserved.</p>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
