--- a/birthday.html
+++ b/birthday.html
@@ -9,6 +9,9 @@
   <link rel="website icon" href="img/Logo.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -71,9 +74,8 @@
       </div>
 
       <!-- Call to Action Button -->
-      <div  style="margin-top: 20px;">
-        <a 
-          href="https://en.wikipedia.org/wiki/Birthday_Party" target="_blank"
+      <div style="margin-top: 20px;">
+        <a href="https://en.wikipedia.org/wiki/Birthday_Party" target="_blank"
           style=" padding: 10px 20px; background: #ff6b6b; color: white; border-radius: 5px; text-decoration: none;">ABOUT
           US</a>
       </div>
@@ -97,7 +99,7 @@
           <li>Creative Cake Design</li>
           <li>Live DJ</li>
         </ul>
-        <p class="price">$1,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>2,000</p>
         <button class="bt">Book Now</button>
       </div>
 
@@ -109,7 +111,7 @@
           <li>Branded Stage Design and Cake</li>
           <li>Event Photography with reels</li>
         </ul>
-        <p class="price">$3,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>5,000</p>
         <button class="bt">Book Now</button>
       </div>
       <div class="royal-card delay-3">
@@ -121,7 +123,7 @@
           <li>Live Performers with Celebration</li>
           <li>Custom Corporate Gifts and bokhes</li>
         </ul>
-        <p class="price">$5,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>10,000</p>
         <button class="bt">Book Now</button>
       </div>
     </div>
