--- a/farewell.html
+++ b/farewell.html
@@ -9,6 +9,9 @@
   <link rel="website icon" href="img/Logo.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -73,7 +76,8 @@
       <!-- Call to Action Button -->
       <div style="margin-top: 20px;">
         <a href="https://teambuilding.com/blog/farewell-party-ideas#:~:text=Farewell%20parties%20are%20events%20or,show%20appreciation%20for%20their%20service."
-          target="_blank" style=" padding: 10px 20px; background: #ff6b6b; color: white; border-radius: 5px; text-decoration: none;">ABOUT
+          target="_blank"
+          style=" padding: 10px 20px; background: #ff6b6b; color: white; border-radius: 5px; text-decoration: none;">ABOUT
           US</a>
       </div>
     </div>
@@ -96,7 +100,7 @@
           <li>frinds fantacy</li>
           <li>Live concert with frnds</li>
         </ul>
-        <p class="price">$2,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>5,000</p>
         <button class="bt">Book Now</button>
       </div>
 
@@ -109,7 +113,7 @@
           <li>Branded Stage Design</li>
           <li>Event Photography and reels</li>
         </ul>
-        <p class="price">$4,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>8,000</p>
         <button class="bt">Book Now</button>
       </div>
       <div class="royal-card delay-3">
@@ -120,7 +124,7 @@
           <li>Live Performers</li>
           <li>Custom Corporate Gifts</li>
         </ul>
-        <p class="price">$6,000</p>
+        <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>12,000</p>
         <button class="bt">Book Now</button>
       </div>
     </div>
