--- a/wedding.html
+++ b/wedding.html
@@ -9,6 +9,9 @@
     <link rel="website icon" href="img/Logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -18,7 +21,7 @@
             <a href="#" class="logo">Happi<span>vents</span></a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
-                 <li class="dropdown">
+                <li class="dropdown">
                     <a href="events.html">Events <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
                         <li><a href="corporate.html">Corporate Events</a></li>
@@ -41,7 +44,7 @@
     <div
         style=" position:relative; top: 90px; display: flex;flex-wrap: wrap; align-items: center; gap: 40px; padding: 30px; margin-bottom: 10px; ">
         <!-- Left Side: Image -->
-        <div >
+        <div>
             <img src="img/wedding-img.jpg" alt="Event Celebration"
                 style="width: 100%; border-radius: 8px; object-fit: cover;">
         </div>
@@ -71,7 +74,7 @@
             </div>
 
             <!-- Call to Action Button -->
-            <div  style="margin-top: 20px;">
+            <div style="margin-top: 20px;">
                 <a href="https://en.wikipedia.org/wiki/Wedding" target="_blank"
                     style=" padding: 10px 20px; background: #ff6b6b; color: white; border-radius: 5px; text-decoration: none;">ABOUT
                     US</a>
@@ -96,7 +99,7 @@
                     <li>Unique light decoration</li>
                     <li>Live song performence</li>
                 </ul>
-                <p class="price">$10,000</p>
+                <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>1,00000</p>
                 <button class="bt">Book Now</button>
             </div>
 
@@ -108,11 +111,11 @@
                     <li>Branded Stage Design</li>
                     <li>Event 4k Photography</li>
                 </ul>
-                <p class="price">$14,000</p>
+                <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>200000</p>
                 <button class="bt">Book Now</button>
             </div>
             <div class="royal-card delay-3">
-                 <span class="popular-label">Popular</span>
+                <span class="popular-label">Popular</span>
                 <h3>Deluxe<br>Package</h3>
                 <ul>
                     <li>All Premium Features</li>
@@ -120,13 +123,13 @@
                     <li>Live Performers and DJ</li>
                     <li>3D Videos Photography</li>
                 </ul>
-                <p class="price">$16,000</p>
+                <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>300000</p>
                 <button class="bt">Book Now</button>
             </div>
         </div>
     </section>
 
-     <!-- Footer -->
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
             <div class="footer-col">
