--- a/festive and concert.html
+++ b/festive and concert.html
@@ -96,7 +96,7 @@
         <ul>
           <li>Elegant Venue Setup</li>
           <li>Premium Refreshments</li>
-          <li>frinds fantacy</li>
+          <li>family fantacy</li>
           <li>Live concert with frnds</li>
         </ul>
         <p class="price"><i class="fa-solid fa-indian-rupee-sign"></i>3,000</p>
